# marketplace-metadata

./: .env.example  .gitignore  Makefile  README.md  UI_SPEC.md  UI_marketplace_first_version_spec.md  UPDATED_EXISTING_CATALOG_UI_SPEC.md
.github/workflows/: ci.yml
UI_Specs/: Untitled
backend/: pyproject.toml
backend/src/catalog_agent/: config.py
backend/src/catalog_agent/api/: main.py
backend/src/catalog_agent/bq/: client.py  information_schema.py  reader.py  writer.py
backend/src/catalog_agent/catalog/: __init__.py  __main__.py  crawler.py  llm_enricher.py  models.py  pii.py
backend/src/catalog_agent/lineage/: __init__.py  __main__.py  client.py  fetcher.py  jobs_fallback.py  models.py  writer.py
backend/tests/integration/: test_crawl_real_dataset.py  test_lineage_real_dataset.py
backend/tests/unit/: test_crawler.py  test_health.py  test_jobs_fallback.py  test_lineage_fetcher.py  test_llm_enricher.py  test_pii.py
docs/: lineage-api-notes.md  m00-foundation.md  m01-catalog-crawler.md  m02-lineage-fetcher.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: ActivityPanel.tsx  MarketplaceModal.tsx  WizardStepper.tsx
frontend/src/pages/: BuildWizard.tsx  LandingPage.tsx  MarketplacePage.tsx  UpdateWizard.tsx
frontend/src/pages/wizard/: StepCrawl.tsx  StepProject.tsx  StepRegistry.tsx  UpdateStepIdentify.tsx  UpdateStepRun.tsx
infra/: Makefile
infra/bq/: data_catalog_registry.sql  lineage_registry.sql
